--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^15.2.10",
+    "@angular/animations": "^14.1.0",
     "@angular/common": "^15.2.10",
     "@angular/compiler": "^15.2.10",
     "@angular/core": "^15.2.10",
@@ -22,7 +22,8 @@
     "@angular/router": "^15.2.10",
     "@fortawesome/fontawesome-free": "^6.6.0",
     "@ng-select/ng-select": "^13.0.0",
-    "ngx-spinner": "^17.0.0",
+    "@ngneat/helipopper": "^5.1.4",
+    "ngx-spinner": "^v14.0.0",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.6.13",
     "tippy.js": "^6.3.7",
