--- a/tsconfig.json
+++ b/tsconfig.json
@@ -33,5 +33,9 @@
   "include": [
     "src/**/*.ts",
     "src/polyfills.ts" // Incluye polyfills.ts en la compilación
+  ],
+  "exclude": [
+    "node_modules",
+    "dist"
   ]
 }
